# SimpleWhpDemo

./: CHECKLIST.md  Cargo.toml  FAR_PLANNING.md  ami.asm  build.rs  readme.md
SimpleWhpDemo/: SimpleWhpDemo.vcxproj  SimpleWhpDemo.vcxproj.filters  main.c  portlog.c  vmdef.h
SimpleWhpDemo/include/: portlog.h
docs/: AMI_DISASM.md  ami_bios_phases.md  ami_bios_plan.md
scripts/: ami_full.txt  disasm_ami.py  ivt_full.txt
src/: main.rs  portlog.rs
tests/: beep.asm  hello_cga.asm  ivt.asm  keyboard.asm
vypis/: portPcem.txt  portSimpleWhpDemo.txt
